<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Randomizer</string>
    <string name="app_title">Randomizer</string>
    <string name="app_subtitle">Does some randomizations...</string>
    <string name="btn_select_folder">Click Here To Randomize</string>
    <string name="folder_icon_desc">Folder icon</string>
    <string name="status_icon_desc">Status icon</string>

    <!-- Navigation Drawer -->
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="nav_header_title">Randomizer App</string>
    <string name="nav_header_subtitle">Version 1.0.0</string>

    <!-- Screen Titles -->
    <string name="title_settings">Settings</string>
    <string name="title_help">Help &amp; Support</string>
    <string name="title_about">About Randomizer</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="btn_reverse">Reverse Randomization</string>
    <string name="btn_check_sum">Check Some...</string>
    <string name="about_description">\nThis app is a powerful utility for randomizing file names in selected directories.</string>
</resources>
